# K-POP-Lyrics-1964-2020

./: .gitignore  Melon_lyrics_crawler.ipynb  README.md  pyproject.toml
1986to1991/network/: data.json  index.html
1992to1997/network/: data.json  index.html
2015to2020/network/: config.json  data.json  index.html
Project2/: estadisticas.json  index.html
Project2/1985to2020/: 1985to2020.gexf
data/lyric_frequency/: lyric_freq_all.csv  lyric_freq_genre_0-10.csv  lyric_freq_genre_11-30.csv  lyric_freq_genre_31-42.csv
data/lyrics_co_occurence/: lyric_co_occurenced_1964-1990.csv
data/lyrics_cooccured/: cooccured_edges_in_period_1986to1991.csv  cooccured_edges_in_period_1992to1997.csv  cooccured_edges_in_period_2015to2020.csv  cooccured_nodes_1985_2020.csv  cooccured_weighted_edges_1985_2020.csv  coocuured_weighted_edges_1985_2019.csv  lyric_cooccured_commons_1995_1999.csv  lyric_cooccured_commons_2000_2004.csv  (+10 more)
graph/: estadisticas.json  index.html  info.html
scripts/: Melon_lyrics_crawler.ipynb  Melon_lyrics_crawler_STEP_1.ipynb  Melon_lyrics_crawler_STEP_2.ipynb  STEP_4_extract_words_by_lines.ipynb  count_words_by_year.ipynb  find_cooccured_words.ipynb  get_cooccured_edges_from_1985_to_2020.ipynb  get_cooccured_words_in_periods_1986to1991_1992to1997_2015to2020.ipynb  lyric_freq_genre_31-42.csv  lyrics_co_occured_1985_2019.ipynb  lyrics_co_occured_commons.ipynb  lyrics_co_occured_commons_parse.ipynb  lyrics_co_occurence.ipynb  lyrics_word_counter.ipynb  lyrics_word_counter_by_year.ipynb  lyrics_word_parser.ipynb  preprocess_data.ipynb  preprocess_lyrics.ipynb
(+25 files in other folders)
