[tool.poetry]
name = "k-pop-lyrics-1964-2020"
version = "0.1.0"
description = ""
authors = ["junhcha <quffl9612@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pandas = "^1.4.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
cmake = "^3.22.2"
ipykernel = "^6.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
